# mchat

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  README.zh.md
src/backend/: .coverage  .env.example  Dockerfile  Dockerfile.lite  pyproject.toml  requirements-lite.txt  requirements.txt
src/backend/app/: __init__.py  exceptions.py  main.py
src/backend/app/api/: __init__.py  agent.py  auth.py  channel.py  chat.py  dashboard.py  health.py  knowledge.py  portal.py  settings.py  skill.py  skill_schedule.py  speech.py  template.py  uploads.py  wechat_public.py  widget.py  workflow.py  workspace.py
src/backend/app/bot/: auto_reply_rules.py  chat_extensions.py  dsml_parser.py  engine.py  handler.py  messages.py  patent_links.py  patent_search_followup.py  provider.py  query_rewrite_chat.py  reply_persist.py  skill_context.py
src/backend/app/channels/: __init__.py  base_adapter.py  dingtalk_adapter.py  line_adapter.py  slack_adapter.py  telegram_adapter.py  wechat_adapter.py  whatsapp_adapter.py
src/backend/app/cli/: __init__.py  __main__.py
src/backend/app/core/: config.py  database.py  event_bus.py  migrations.py  security.py  skills_paths.py
src/backend/app/customer/: __init__.py  manager.py
src/backend/app/data/: patent_workflow_showcase.py  workflow_templates.py
src/backend/app/knowledge/: bm25.py  chunk_store.py  rag.py  (+12 more)
src/backend/cloud/: main.py
src/backend/mchat_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+492 files in other folders)
