[project]
name = "mchat-backend"
version = "1.0.0"
description = "mchat backend - Multi-tenant AI chat platform"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mchat = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "cloud*"]
exclude = ["logs*", "skills*", "uploads*", "tests*"]
